--- a/report/example.tex
+++ b/report/example.tex
@@ -537,6 +537,15 @@ Including expansions of non-standard abbreviations, acronyms and other key defin
 \section{API}
 Application Programming Interface - is a protocol intended to be used as an interface by software components to communicate with each other.
 
+\chapter{Maintenance document}
+
+TODO
+summarization of the delivered software, identifying all major deficiencies
+
+\chapter{User manual}
+
+TODO
+
 \bibliographystyle{plain}
 \bibliography{example}
 \end{document}
