User manual and class diagrams updated

--- a/report/figures/main.tex
+++ b/report/figures/main.tex
@@ -13,7 +13,8 @@ import java.util.Random;
 
 public class Main {
     
-    private static AnimatedDataStructure anim;
+    private static AnimatedDataStructure anim; //Declare the AnimatedDataStructure you want
+	//to animate here
     public static int time = 200;
     
 	public static void main(String[] args) {
